@@ -1,18 +1,19 @@
-import edu.wpi.first.toolchain.*
+import org.wpilib.toolchain.*
 
 plugins {
     id 'cpp'
     id 'java'
     id 'java-library'
     id 'google-test'
-    id 'edu.wpi.first.wpilib.repositories.WPILibRepositoriesPlugin' version '2025.0'
-    id 'edu.wpi.first.NativeUtils' version '2026.0.1'
-    id 'edu.wpi.first.GradleJni' version '1.1.0'
-    id 'edu.wpi.first.GradleVsCode' version '2.1.0'
-    id 'com.diffplug.spotless' version '8.0.0'
+    id 'org.wpilib.WPILibRepositoriesPlugin' version '2027.0.0'
+    id 'org.wpilib.NativeUtils' version '2027.7.1'
+    id 'org.wpilib.GradleJni' version '2027.0.0'
+    id 'org.wpilib.GradleVsCode' version '2027.0.0'
+    id 'com.diffplug.spotless' version '8.4.0'
     id 'jacoco'
 }
 
+ext.wpilibVersion = "2027.+"
 ext.getCurrentArch = {
     return NativePlatforms.desktop
 }
@@ -20,9 +21,10 @@ ext.getCurrentArch = {
 def systemArch = getCurrentArch()
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
 }
+var javaVersion = "25"
 
 repositories {
     mavenCentral()
@@ -32,20 +34,22 @@ if (project.hasProperty('releaseMode')) {
 } else {
     wpilibRepositories.addAllDevelopmentRepositories(project)
 }
+wpilibRepositories.use2027Repos()
 
 // Apply C++ configuration
 apply from: 'config.gradle'
 
 // Apply Java configuration
 dependencies {
-    implementation 'edu.wpi.first.wpilibj:wpilibj-java:2026.1.1'
-    implementation 'edu.wpi.first.wpiutil:wpiutil-java:2026.1.1'
-    implementation 'edu.wpi.first.wpimath:wpimath-java:2026.1.1'
-    implementation 'edu.wpi.first.wpilibNewCommands:wpilibNewCommands-java:2026.1.1'
-    implementation 'edu.wpi.first.wpiunits:wpiunits-java:2026.1.1'
-    implementation 'edu.wpi.first.ntcore:ntcore-java:2026.1.1'
-    implementation 'edu.wpi.first.ntcore:ntcore-cpp:2026.1.1'
-    implementation 'edu.wpi.first.hal:hal-java:2026.1.1'
+    implementation 'org.wpilib.wpilibj:wpilibj-java:2027.+'
+    implementation 'org.wpilib.wpiutil:wpiutil-java:2027.+'
+    implementation 'org.wpilib.wpimath:wpimath-java:2027.+'
+    implementation 'org.wpilib:commands3-java:2027.+'
+    implementation 'org.wpilib:annotations-java:2027.+'
+    implementation 'org.wpilib.wpiunits:wpiunits-java:2027.+'
+    implementation 'org.wpilib.ntcore:ntcore-java:2027.+'
+    implementation 'org.wpilib.ntcore:ntcore-cpp:2027.+'
+    implementation 'org.wpilib.hal:hal-java:2027.+'
 
     api "com.fasterxml.jackson.core:jackson-annotations:2.19.2"
     api "com.fasterxml.jackson.core:jackson-core:2.19.2"
@@ -54,9 +58,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.13.1'
 
     // This is needed to use wpilibj Filesystem class
-    testImplementation 'edu.wpi.first.cscore:cscore-java:2026.1.1'
-    testImplementation 'edu.wpi.first.cameraserver:cameraserver-java:2026.1.1'
-    testImplementation 'edu.wpi.first.hal:hal-java:2026.1.1'
+    testImplementation 'org.wpilib.cscore:cscore-java:2027.+'
+    testImplementation 'org.wpilib.cameraserver:cameraserver-java:2027.+'
+    testImplementation 'org.wpilib.hal:hal-java:2027.+'
 
     testImplementation 'us.hebi.quickbuf:quickbuf-runtime:1.4'
 
@@ -73,11 +77,11 @@ test {
     systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
     testLogging {
         events "failed"
-        exceptionFormat = "full"
+        exceptionFormat "full"
     }
 }
 
-if (project.hasProperty('onlylinuxathena') || project.hasProperty('onlylinuxarm32') || project.hasProperty('onlylinuxarm64') || project.hasProperty('onlywindowsarm64')) {
+if (project.hasProperty('onlylinuxarm64') || project.hasProperty('onlywindowsarm64') || project.hasProperty('onlylinuxsystemcore')) {
     test.enabled = false
 }
 
@@ -141,7 +145,7 @@ model {
                 }
             }
 
-            nativeUtils.useRequiredLibrary(it, "wpilib_executable_shared", "googletest_static")
+            nativeUtils.useRequiredLibrary(it, "wpilib_shared", "googletest_static")
 
             binaries.all {
                 def arch = it.targetPlatform.name
@@ -195,7 +199,7 @@ spotless {
 }
 
 javadoc {
-    options.links("https://docs.oracle.com/en/java/javase/17/docs/api/")
+    options.links("https://docs.oracle.com/en/java/javase/${javaVersion}/docs/api/")
     options.links("https://github.wpilib.org/allwpilib/docs/release/java/")
     options.addBooleanOption("Xdoclint:html,missing,reference,syntax", true)
     options.addBooleanOption('html5', true)
@@ -228,10 +232,18 @@ test {
     testLogging.showStandardStreams = true
 
     finalizedBy jacocoTestReport
+
+    // For reflective access to continuation classes in unit tests
+    jvmArgs += [
+        "--add-opens",
+        "java.base/jdk.internal.vm=ALL-UNNAMED",
+        "--add-opens",
+        "java.base/java.lang=ALL-UNNAMED",
+    ]
 }
 
 apply from: 'publish.gradle'
 
 wrapper {
-    gradleVersion = '8.14.3'
+    gradleVersion '9.4.1'
 }
